fix focussed dropdown and adaptive placeholder overlapping eachother

--- a/src/assets/css/frontend/elements.sass
+++ b/src/assets/css/frontend/elements.sass
@@ -898,6 +898,9 @@ h1.super-thanks-title
     font-weight: normal
 .super-filled .super-adaptive-placeholder:before
   content: attr(data-placeholderFilled)
+.super-focus
+  .super-adaptive-placeholder
+    z-index: 3600
 
 /* Default Theme & Size
 .super-focus:not(.super-focus-dropdown) .super-adaptive-placeholder,
@@ -2029,7 +2032,7 @@ textarea
       padding: 0px 0px 0px 0px
       position: absolute
       width: 100%
-      z-index: 2500
+      z-index: 3500
       left: 0px
       max-height: 200px
       overflow: auto
